faet: StoreMenu 리턴타입 클래스 -> 인터페이스로 변경 및 적용